# PR

./: .gitignore  README.md  pyproject.toml
docs/: DEMO_SCRIPT.md  REPORT.md
scripts/: analyze_behaviour.py  augment_detector_dataset.py  build_embeddings.py  check_setup.py  cluster_identities.py  prepare_detection_data.py  run_demo.py  run_detection.py  train_detector.py  view_identities.py
src/analysis/: behaviour.py
src/detection/: predictor.py  yolo_trainer.py
src/furseal_face_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/recognition/: cluster.py  embedding_model.py  face_extractor.py  storage.py
src/utils/: config.py  experiments.py  logging.py  paths.py
